src/test/deca/context/invalid/renduInter01/01Ineq_comparator_type_incompatible.deca
// Description:
//    tests conditionnelle : expression "plus grand" (symbole >)
//
// Resultats:
//    Erreur contextuelle : l'opérateur > n'est pas utilisable avec une variable de type string

{
    int x = 2;
    if ( x > "hello" ) {
        println("ok");
    } else {
        print("erreur");
    }
}
